12월 29일 모각코 공부
함수를 이용해 전광판 만들기

--- a/static/style.css
+++ b/static/style.css
@@ -6,11 +6,15 @@ body{
   text-align: center;
   font: 5em sans-serif;
 }
-
-
+aquamarine
+aliceblue
+antiquewhite
+aqua 
 span{
   background-color: antiquewhite;
+
   border-radius: 1rem;
   font-size: 3rem;
   cursor: pointer;
 }
+
